# NLP-Rag-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  My.MD  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  document_loader.py  main.py  mongo_loader.py  rag.py  routes.py  schemas.py
app/prompts/: __init__.py  system_rag.txt
data/: ahmed sawy.txt  python_basics.txt
src/: .env.example  main.py  requirements.txt
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/enums/: ProcessEnums.py  ResponseEnums.py  __init__.py
src/helpers/: config.py
src/models/: ProjectModel.py
src/models/ db_schemas/: data_chunk.py  project.py
src/routes/: base.py  data.py
src/routes/schemas/: __init__.py
